# dune_processes

./: .dockerignore  .markdown-link-check.json  .pre-commit-config.yaml  Dockerfile  README.md  codecov.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: auto-merge.yml  ci.yml  pre-commit.yml  pre-commit_autoupdate.yml
controller/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
controller/templates/controller/: index.html
data/: README.md  process-manager-pocket-kafka.json
drunc_docker_service/: Dockerfile  process-manager-kafka.json  process-manager-no-kafka.json  requirements.txt
drunc_ui/: __init__.py  asgi.py  urls.py  wsgi.py
drunc_ui/settings/: __init__.py  settings.py
dune_processes/: __init__.py  __main__.py  settings.py  urls.py
dune_processes/settings/: __init__.py  settings.py
main/: __init__.py  apps.py  forms.py  models.py  permissions.py  tables.py  urls.py  views.py
main/management/commands/: kafka_consumer.py
main/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_broadcastmessage.py  0003_druncmessage.py
main/templates/main/: base.html  boot_process.html  help.html  index.html  logs.html  navbar.html
main/templates/main/partials/: process_table.html
main/templates/registration/: login.html
process_manager/: __init__.py  admin.py  apps.py  forms.py  models.py  process_manager_interface.py  tables.py  urls.py  views.py
process_manager/templates/process_manager/: boot_process.html  index.html  logs.html
process_manager/templates/process_manager/partials/: message_items.html  process_table.html
process_manager/views/: __init__.py  actions.py  pages.py  partials.py
scripts/: kafka_consumer.py  talk_to_process_manager.py
tests/: __init__.py  conftest.py  test_dune_processes.py  test_forms.py  test_process_manager_interface.py  test_views.py  utils.py
tests/controller/: test_views.py
tests/main/: test_views.py
tests/process_manager/: test_forms.py  test_views.py
tests/process_manager/views/: test_action_views.py  test_page_views.py  test_partial_views.py
